--- a/src/goodShopCart.html
+++ b/src/goodShopCart.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>网易考拉海淘-购物车</title>
   <link rel="stylesheet" href="css/index.css" media="screen" title="no title">
   <link rel="stylesheet" href="css/goodShopCart.css" media="screen" title="no title">
+  <link rel="stylesheet" href="demo/dialog.css" media="screen" title="no title">
+  <link rel ="Shortcut Icon" href=favicon.ico>
 </head>
 <body>
   <nav class="hd-NavTop">
     <div class="hd-NavTopL1">
       考拉欢迎你！
-      <a href="../Land/land.html">登陆</a>
+      <a href="signin.html">登陆</a>
       <span>|</span>
-      <a href="../Login/login.html" target="_blank">免费注册</a>
+      <a href="login.html" target="_blank">免费注册</a>
     </div>
     <div class="hd-NavTopL2">
       <a href="http://app.kaola.com">
@@ -67,7 +69,7 @@
     </ul>
   </nav>
   <div class="hd-NavBg"></div>
-  <header class="hd-index">
+  <header class="hd-index" style="padding: 20px 0 ;">
     <div class="hd-index-wrap clearfix">
       <div class="hd-kaolaLogo"><img src="img/kaolaLogo.png" alt="网易考拉海淘"></div>
       <div class="hd-step">
@@ -82,19 +84,19 @@
   </header>
   <div class="m-cart">
     <div class="m-cart-wrap">
-      <div class="cart-empty" style="display:none">
+      <div class="cart-empty" >
         <img src="img/cartIcon.jpg" alt="">
         <div class="empty-txt">
-          <span>购物车空空如也，赶紧去<a href="index.html">逛逛吧</a></span>
-          <span>或者您可以先进行<a href="signin.html">登录</a></span>
+          <span>购物车空空如也，赶紧去<a href="http://localhost:3000/src/index.html">逛逛吧</a></span>
+          <span>或者您可以先进行<a href="http://localhost:3000/src/signin.html">登录</a></span>
         </div>
       </div>
-      <div class="cart-exist">
+      <div class="cart-exist" style="display:none">
         <div class="mycartBox">
           <div class="mycart-short-info">
             <div class="mycart-btn-allselect">
-              <input type="checkbox" name="name" value="" id="btn-allselect" class="new-checkbox">
-              <label for="btn-allselect">全选</label>
+              <input type="checkbox" name="name" value="" id="btn-allselect" class="new-checkbox btn-all-select">
+              <label for="btn-allselect" class="label-all-select">全选</label>
             </div>
             <div class="mycart-goods-info">商品信息</div>
             <div class="mycart-goods-unit-price ">单价（元）</div>
@@ -104,8 +106,8 @@
           </div>
           <div class="mycart">
             <div class="location-send">
-              <input type="checkbox" class="new-checkbox">
-              <h2>XX保税仓发货</h2>
+              <input type="checkbox" class="new-checkbox" id="this-location-1">
+              <label for="this-location-1"><h2>XX保税仓发货</h2></label>
             </div>
             <div class="goods">
               <div class="show-goods">
@@ -113,11 +115,11 @@
                   <div class="active-pic notice-keyword centerX" id="nowActiveName">XXX活动</div>
                   <div class="active-des">
                     <p>再购<span class="notice-keyword active-goods-num">X</span>件立享【<span class="active-name">活动名</span>】</p>
-                    <a href="index.html">去凑单&gt;</a>
+                    <a href="http://localhost:3000/src/index.html">去凑单&gt;</a>
                   </div>
                 </div>
                 <ul class="your-cart-goods">
-                  <li class="goods-item">
+                  <!-- <li class="goods-item">
                     <div class="col col1">
                       <input type="checkbox" name="name" value="" class="new-checkbox">
                     </div>
@@ -146,8 +148,8 @@
                       <p class="collect-this">移入我的收藏</p>
                     </div>
                     <div class="vine-line"></div>
-                  </li>
-                  <li class="goods-item">
+                  <!-- </li> -->
+                  <!-- <li class="goods-item">
                     <div class="col col1">
                       <input type="checkbox" name="name" value="" class="new-checkbox">
                     </div>
@@ -160,8 +162,8 @@
                       </div>
                     </div>
                     <div class="col col3">
-                      <p class="old-price">100</p>
-                      <p class="new-price">20</p>
+                      <p class="old-price">200</p>
+                      <p class="new-price">85</p>
                     </div>
                     <div class="col col4">
                       <button class="reduce-goods-num">-</button>
@@ -176,7 +178,7 @@
                       <p class="collect-this">移入我的收藏</p>
                     </div>
                     <div class="vine-line"></div>
-                  </li>
+                  </li>  -->
                 </ul>
                 <div class="tax-rule">
                   <div class="tax-content">
@@ -199,11 +201,11 @@
           <div class="totalbox">
             <div class="totalLeft">
               <div class="btn-selectall">
-                <input type="checkbox" id="btn-total-selectall" class="new-checkbox">
-                <label for="btn-total-selectall">全选</label>
+                <input type="checkbox" id="btn-total-selectall" class="new-checkbox btn-all-select">
+                <label for="btn-total-selectall" class="label-all-select">全选</label>
               </div>
               <div class="btn-deleteSelect">
-                <a href="#" id="btn-total-deleteSelect">删除选中商品</a>
+                <a href="javascript:" id="btn-total-deleteSelect">删除选中商品</a>
               </div>
             </div>
             <div class="totalRight">
@@ -278,7 +280,7 @@
             <ul class="allbuy-goods ul-flex">
               <li>
                 <figure>
-                  <img src="img/onlinei8bp70f410066 (1).jpg" alt="" width="204px" height="204px">
+                  <img src="img/onlinei8bp70f410066(1).jpg" alt="" width="204px" height="204px">
                   <figcaption>
                     <p class="allbuy-goods-info">
                       <span class="allbuy-goods-name">商品名称商品名称商品名称商品名称商品名称商品名称</span></p>
@@ -349,6 +351,8 @@
     </div>
   </footer>
   <script src="js/vendor/jquery-3.1.0.min.js" charset="utf-8"></script>
+  <script src="js/vendor/jquery.cookie.js" charset="utf-8"></script>
   <script src="js/goodShopCart.js" charset="utf-8"></script>
+
 </body>
 </html>
